Remove venv from repository and update gitignore

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,7 +12,7 @@
             <div id="line-numbers" class="line-numbers"></div>
             <textarea id="code-area" placeholder="Start coding..." spellcheck="false"></textarea>
         </div>
-        <button id="run-button">Run Code</button>
+        <button id="runBtn">Run Code</button>
         <div id="output-container">
             <h2>Output:</h2>
             <pre id="output-area"></pre>
