Initial commit with updated README and project screenshots

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>My Code Editor</title>
-        <link rel="stylesheet" href="style.css" />
-    </head>
-    <body>
-        <h1>CogniCode– Build. Compile. Execute.</h1>
-        <div class="editor-container">
-            <div id="line-numbers" class="line-numbers"></div>
-            <textarea id="code-area" placeholder="Start coding..." spellcheck="false"></textarea>
-        </div>
-        <button id="runBtn">Run Code</button>
-        <div id="output-container">
-            <h2>Output:</h2>
-            <pre id="output-area"></pre>
-        </div>
-        <script src="editor.js"></script>
-    </body>
+<html>
+<head>
+    <meta charset="UTF-8" />
+    <title>CogniCode</title>
+    <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+
+<h1>CogniCode — Build. Execute. Learn.</h1>
+
+<div class="editor-container">
+    <div id="lineNumbers" class="line-numbers"></div>
+    <textarea id="codeArea"></textarea>
+</div>
+
+<button id="runBtn">Run Code</button>
+
+<h3>Output</h3>
+<pre id="outputArea"></pre>
+
+<script src="editor.js"></script>
+</body>
 </html>
